[gd_scene load_steps=19 format=3 uid="uid://hijht0dsuvgo"]

[ext_resource type="Theme" uid="uid://cfkxwyulff85" path="res://assets/theme.tres" id="1_g8ogf"]
[ext_resource type="Script" uid="uid://b7sbeegio13yy" path="res://interface/main_menu.gd" id="1_wwcsp"]
[ext_resource type="PackedScene" uid="uid://hsux5oifdyix" path="res://assets/water_shader.tscn" id="2_dftu7"]
[ext_resource type="AudioStream" uid="uid://bxt36m8we87f8" path="res://assets/audio/Boop.wav" id="3_bjm56"]
[ext_resource type="Shader" uid="uid://2jyk63bthwvy" path="res://assets/water_shader.gdshader" id="3_rahlh"]
[ext_resource type="Texture2D" uid="uid://hu848l4mhkhr" path="res://assets/bakgrunnur i.png" id="3_vnffm"]
[ext_resource type="Texture2D" uid="uid://damcv0bmipy64" path="res://assets/bottom_back..png" id="4_b4dut"]
[ext_resource type="Texture2D" uid="uid://bjl6bwjm8yy81" path="res://assets/bottom_mid.png" id="5_v8blk"]
[ext_resource type="PackedScene" uid="uid://cqswwvxdx7x5w" path="res://components/spawn_component.tscn" id="6_40t8b"]
[ext_resource type="Texture2D" uid="uid://b48kcaieiyha" path="res://assets/fullscreen_icon.png" id="7_i2iwl"]
[ext_resource type="PackedScene" uid="uid://3jpb3qgykne6" path="res://nodes/fish.tscn" id="7_k6ain"]
[ext_resource type="Texture2D" uid="uid://cutltocyoo061" path="res://assets/Minimize_icon.png" id="8_sra6w"]
[ext_resource type="PackedScene" uid="uid://4eng36vlcp03" path="res://nodes/fish2.tscn" id="8_vo645"]
[ext_resource type="PackedScene" uid="uid://b1ub6vrhf2n8m" path="res://nodes/fish3.tscn" id="9_6hdiq"]
[ext_resource type="Texture2D" uid="uid://cvvwqhvuv6vsa" path="res://assets/bottom_front.png" id="10_a302r"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_i74xo"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_g8y3y"]
width = 500
height = 500
seamless = true
noise = SubResource("FastNoiseLite_i74xo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wwcsp"]
shader = ExtResource("3_rahlh")
shader_parameter/CAST_COLOR = Color(0, 0.0595723, 0.127542, 1)
shader_parameter/fast_noise = SubResource("NoiseTexture2D_g8y3y")
shader_parameter/speed = Vector2(0.03, 0.07)
shader_parameter/wave_strength = 1.0
shader_parameter/scale_y = 0.0
shader_parameter/y_zoom = 1.0

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_wwcsp")
clickSound = ExtResource("3_bjm56")

[node name="sprites" type="Node2D" parent="."]

[node name="BakgrunnurI" type="Sprite2D" parent="sprites"]
position = Vector2(1013, 563)
texture = ExtResource("3_vnffm")

[node name="BottomBack_" type="Sprite2D" parent="sprites"]
position = Vector2(968, 496)
texture = ExtResource("4_b4dut")

[node name="BottomMid" type="Sprite2D" parent="sprites"]
position = Vector2(968, 496)
texture = ExtResource("5_v8blk")

[node name="spawnComponent" parent="." instance=ExtResource("6_40t8b")]
fish_scene = Array[PackedScene]([ExtResource("7_k6ain"), ExtResource("8_vo645"), ExtResource("9_6hdiq")])
max_fish = 12
spawn_area = Rect2(0, 0, 1920, 1080)
spawn_rate = 0.001

[node name="BottomFront" type="Sprite2D" parent="."]
position = Vector2(968, 496)
texture = ExtResource("10_a302r")

[node name="menu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -159.0
offset_right = 173.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.38448, 1.41016)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_g8ogf")

[node name="Label" type="Label" parent="menu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 46
text = "Viking Fishing"
horizontal_alignment = 1

[node name="pillow1" type="Control" parent="menu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="start" type="Button" parent="menu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Start"

[node name="pillow2" type="Control" parent="menu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="settings" type="Button" parent="menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Settings"

[node name="settings" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -155.0
offset_right = 160.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.29534, 1.33152)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_g8ogf")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 46
text = "Settings"
horizontal_alignment = 1

[node name="pillow1" type="Control" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.85

[node name="Label4" type="Label" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "master"
horizontal_alignment = 1

[node name="pillow6" type="Control" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="master" type="HSlider" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001
value = 0.8

[node name="Label2" type="Label" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "music"
horizontal_alignment = 1

[node name="pillow4" type="Control" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="music" type="HSlider" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001
value = 0.8

[node name="pillow2" type="Control" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Label3" type="Label" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "sound"
horizontal_alignment = 1

[node name="pillow5" type="Control" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="sfx" type="HSlider" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.001
value = 0.8

[node name="pillow3" type="Control" parent="settings"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="back" type="Button" parent="settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Back"

[node name="waterShader" parent="." instance=ExtResource("2_dftu7")]
z_index = 10
material = SubResource("ShaderMaterial_wwcsp")
position = Vector2(978.125, 553.875)
scale = Vector2(1991.75, 1164.25)

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color(4.09111e-07, 0.409504, 0.410161, 1)
self_modulate = Color(0, 0.396861, 0.396861, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -166.0
offset_top = 60.0
offset_right = -15.9999
offset_bottom = 210.0
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
toggle_mode = true
texture_normal = ExtResource("7_i2iwl")
texture_pressed = ExtResource("8_sra6w")

[connection signal="button_down" from="menu/start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="menu/settings" to="." method="_on_settings_button_down"]
[connection signal="value_changed" from="settings/master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="settings/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="settings/sfx" to="." method="_on_sfx_value_changed"]
[connection signal="button_down" from="settings/back" to="." method="_on_back_button_down"]
[connection signal="toggled" from="TextureButton" to="." method="_on_texture_button_toggled"]
